--- a/index.html
+++ b/index.html
@@ -6,13 +6,23 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>A Simple Calculator</title>
+
+    <!-- css -->
     <link rel="stylesheet" href="/style.css">
 </head>
 
 <body>
+    <div class="calculator">
+
+        <div class="display">
+            <input type="text" placeholder="0" name="" id="input" disabled />
+        </div>
+
+        <div class="buttons">
 
 
-    <script src="/script.js"></script>
+            <!-- js -->
+            <script src="/script.js"></script>
 </body>
 
 </html>
